Disable sandbox for Portage in git

--- a/make.conf
+++ b/make.conf
@@ -23,3 +23,4 @@ USE_PYTHON="2.7 3.4"
 PYTHON_TARGETS="python2_7 python3_4 python3_5"
 PYTHON_SINGLE_TARGET="python3_5"
 EMERGE_DEFAULT_OPTS="--quiet"
+FEATURES="-sandbox"
